# secure-tunnel

./: .copier-answers.yml  .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile.ci-repro-cross-python-link  README.md
.github/workflows/: ci.yml
backlog/docs/: 2026-03-15_doc-set-consistency-review.md  2026-03-15_framed-duplex-selector-implementation.md  2026-03-15_plan-phase-tracking-refresh.md  2026-03-15_rust-crate-boundaries-and-secure-channel-api.md  2026-03-15_starter-crate-recommendations.md  2026-03-15_task-00000011_noise-secure-ready-prototype.md  2026-03-15_task-00000015_ci-portability-and-docker-repro.md  README.md  v1-core-protocol-quic-and-wss-bindings.md  v1-device-enrollment-and-known-device-policy.md  v1-glossary.md  v1-service-descriptor-and-bootstrap-config.md  v1-threat-model-and-transport-decisions.md  v1-transport-selection-and-fallback-policy.md
backlog/docs/historical/: 2026-03-14_device-enrollment-and-known-device-policy.md  2026-03-14_initial-research.md  2026-03-14_v1-core-protocol-and-wss-binding.md  2026-03-14_v1-threat-model-and-decisions.md
backlog/plans/: _template.md  plan-00000001_secure-channel-foundation.md
backlog/tasks/: _template.md  task-00000001_consider-starter-crates.md  task-00000005_define-rust-crate-boundaries-and-secure-channel-api.md  task-00000007_define-transport-selection-and-fallback-policy.md  task-00000008_write-transport-agnostic-v1-protocol-plus-quic-and-wss-bindings.md  task-00000009_define-udp-first-deployment-and-observability-requirements.md  task-00000010_implement-framed-duplex-abstraction-and-transport-selector.md  task-00000011_prototype-server-auth-noise-handshake-and-trust-verification-on-transport-neutral-frames.md  task-00000012_prototype-quic-preferred-transport-with-wss-fallback-and-local-secure-session.md  task-00000013_allow-optional-custom-ca-cert-for-intercepted-wss-or-quic.md  task-00000014_allow-optional-http-proxy-for-wss-client.md  task-00000015_stabilize-ci-portability-and-add-docker-repro.md
backlog/tasks/completed/: task-00000001_consider-starter-crates.md  task-00000002_bootstrap-repository-scaffold.md  task-00000003_define-threat-model-and-v1-protocol-decisions.md  task-00000004_write-v1-protocol-spec-for-wss-plus-noise.md  task-00000005_define-rust-crate-boundaries-and-secure-channel-api.md  task-00000006_define-device-enrollment-and-known-device-policy.md  task-00000010_implement-framed-duplex-abstraction-and-transport-selector.md  task-00000011_prototype-server-auth-noise-handshake-and-trust-verification-on-transport-neutral-frames.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: codec.rs  compat.rs  constants.rs  descriptor.rs  error.rs  lib.rs  noise.rs  selector.rs  session.rs  transport.rs  trust.rs
crates/go/: Cargo.toml  cbindgen.toml  go.mod
crates/go-wasm/: .gitignore  Cargo.toml  go.mod
crates/go-wasm/go/: binding.go  binding_test.go
crates/go-wasm/src/: lib.rs
crates/go/go/: binding.go  binding_test.go
crates/go/src/: lib.rs
crates/python/: Cargo.toml
crates/python/src/: lib.rs
mise-tasks/: build-all  check-format  clean-all  copyright  copyright-check  deps-report  format  lint  setup  test
mise-tasks/go-wasm/: build-wasm-debug  build-wasm-release  clean
mise-tasks/repro/: ci-cross-python-link
mise-tasks/rust/: check-all  python-runtime-env  test  test-coverage
python/: pyproject.toml
python/src/secure_tunnel/: __init__.py  secure_tunnel.pyi
python/tests/: test_module.py
scripts/tasks/: go-env.sh
