[package]
name = "secure-tunnel-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

description = "Command-line interface for Secure Tunnel"
homepage = "https://github.com/asim-playground/secure-tunnel"
repository = "https://github.com/asim-playground/secure-tunnel"
documentation = "https://docs.rs/secure-tunnel-cli"
readme = "../../README.md"
keywords = ["secure-tunnel", "cli"]
categories = ["command-line-utilities"]

[dependencies]
secure-tunnel-core = { path = "../core" }

[[bin]]
name = "secure-tunnel-cli"
path = "src/main.rs"

[lints]
workspace = true
