[package]
name = "secure-tunnel-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

description = "Core library for Secure Tunnel"
homepage = "https://github.com/asim-playground/secure-tunnel"
repository = "https://github.com/asim-playground/secure-tunnel"
documentation = "https://docs.rs/secure-tunnel-core"
readme = "../../README.md"
keywords = ["secure-tunnel", "core"]
categories = ["development-tools"]

[dependencies]
base64 = "0.22"
bytes = "1"
ed25519-dalek = "2"
serde = { version = "1.0", features = ["derive"] }
snow = { version = "0.10", default-features = false, features = ["default-resolver", "default-resolver-crypto"] }
thiserror = "2.0"

[dev-dependencies]
futures = "0.3"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[lints]
workspace = true
